--- a/html/mie/css/output/patterns/06-list-of-items.css
+++ b/html/mie/css/output/patterns/06-list-of-items.css
@@ -29,7 +29,7 @@
 
 .items--block {
   padding: 1.5em 1.5em 1em 1.5em;
-  background-color: #e5f3e1; }
+  background-color: #e8ecf5; }
 
 .items .heading__smallest {
   margin: 0 0 0.6em 0; }
@@ -40,8 +40,8 @@
 .items .items__item:before {
   content: "— "; }
 .items .items__item a:hover {
-  color: #222121;
-  border-color: #222121;
+  color: #140431;
+  border-color: #140431;
   border-bottom: 0.1em solid; }
 .items .items__item:after {
   content: " »"; }
@@ -49,10 +49,10 @@
 .items--block .items__item:before {
   content: none; }
 .items--block .items__item a {
-  color: #222121;
-  border-color: #222121; }
+  color: #140431;
+  border-color: #140431; }
 .items--block .items__item a:hover {
-  color: #181717;
+  color: #0e0322;
   border-bottom: 0.1em solid; }
 
 /*# sourceMappingURL=06-list-of-items.css.map */
