--- a/html/mie/css/output/patterns/08-feedback.css
+++ b/html/mie/css/output/patterns/08-feedback.css
@@ -24,8 +24,8 @@
   background-color: #D8ADE5; }
 
 .feedback {
-  background-color: #5dd9ff;
-  border-bottom: 0.2em solid #00bbf4;
+  background-color: #d0d9ec;
+  border-bottom: 0.2em solid #728dc5;
   font-weight: 500;
   padding: 0.8em 1.4em;
   margin: 0 0 1.5em 0; }
