--- a/html/mie/assets-icons/output/icons.fallback.css
+++ b/html/mie/assets-icons/output/icons.fallback.css
@@ -30,6 +30,8 @@
 
 .icon-menu { background-image: url('png/menu.png'); background-repeat: no-repeat; }
 
+.icon-mie-logo { background-image: url('png/mie-logo.png'); background-repeat: no-repeat; }
+
 .icon-pattern { background-image: url('png/pattern.png'); background-repeat: no-repeat; }
 
 .icon-search { background-image: url('png/search.png'); background-repeat: no-repeat; }
