--- a/html/mie/css/output/patterns/02-buttons.css
+++ b/html/mie/css/output/patterns/02-buttons.css
@@ -73,7 +73,7 @@
 
 .btn--light-pastel {
   background-color: #D8ADE5;
-  color: #222121;
+  color: #140431;
   border-bottom: 0.2em solid #bb70d2; }
   .btn--light-pastel:hover {
     box-shadow: inset 0 0 0 0.2em #e8ceef;
@@ -81,25 +81,25 @@
     border-bottom: 0.2em solid #c98edb; }
 
 .btn--contrast {
-  background-color: #008FBB;
-  border-bottom: 0.2em solid #005670; }
+  background-color: #D96E10;
+  border-bottom: 0.2em solid #82420a; }
   .btn--contrast:hover {
-    box-shadow: inset 0 0 0 0.2em #1dcaff;
-    background-color: #008FBB;
-    border-bottom: 0.2em solid #006483; }
+    box-shadow: inset 0 0 0 0.2em #f2994a;
+    background-color: #D96E10;
+    border-bottom: 0.2em solid #984d0b; }
 
 .btn--contrast-alt {
-  background-color: #5AA641;
-  border-bottom: 0.2em solid #366427; }
+  background-color: #6381BF;
+  border-bottom: 0.2em solid #334a7b; }
   .btn--contrast-alt:hover {
-    box-shadow: inset 0 0 0 0.2em #77c05f;
-    background-color: #5AA641;
-    border-bottom: 0.2em solid #488534; }
+    box-shadow: inset 0 0 0 0.2em #829acc;
+    background-color: #6381BF;
+    border-bottom: 0.2em solid #4363a5; }
 
 .btn--white {
   background-color: #ffffff;
   border-bottom: 0.2em solid #b3b3b3;
-  color: #222121; }
+  color: #140431; }
   .btn--white:hover {
     box-shadow: inset 0 0 0 0.2em #D8ADE5;
     background-color: #ffffff;
