--- a/html/mie/css/sass/_4-colours.scss
+++ b/html/mie/css/sass/_4-colours.scss
@@ -15,9 +15,7 @@ $link-text: #5F39AC;
 
 $mid-text: $mid;
 
-$dark-text: $darkest;
-
-$dark-red-text: $dark;
+$dark-text: $dark;
 
 $disabled-text: #666;
 
@@ -44,15 +42,15 @@ $light-pastel: #D8ADE5;
 
 /// Calls to Action / Highlights
 
-$contrast: #008FBB; // WCAG 2 AA Compliant (18pt+)
+$contrast: #D96E10; // WCAG 2 AA Compliant (18pt+)
 
-$contrast-light: #00A3DA; // Don't use for text
+$contrast-light: #FBA458; // Don't use with white for text
 
-$contrast-alt: #5AA641; // WCAG 2 AA Compliant (18pt+)
+$contrast-alt: #6381BF; // WCAG 2 AA Compliant (18pt+)
 
-$contrast-alt-light: #83BF52; // Don't use for text
+$contrast-alt-light: #90AEEC; // Don't use with white for text
 
-$feedback: scale-color($contrast, $lightness: 50%);
+$feedback: scale-color($contrast-alt, $lightness: 70%);
 
 $error: #ffcdb3;
 
@@ -80,9 +78,3 @@ $disabled: #ccc;
 .bg--light-pastel {
   background-color: $light-pastel;
 }
-
-//// Misc Colour Class settings
-
-// The header on SS is a custom colour variant
-
-$header: #5C251B;
