--- a/html/mie/css/sass/patterns/0-navigation.scss
+++ b/html/mie/css/sass/patterns/0-navigation.scss
@@ -214,7 +214,7 @@
     padding: 0;
     text-align: center;
     float: left;
-    border-bottom: 0.1em solid scale-color($dark, $lightness: 10%);
+    border-bottom: 0.1em solid scale-color($contrast-alt, $lightness: -30%);
     &:nth-child(1) {
       width: 25%;
     /*  padding: 0;
@@ -238,12 +238,12 @@
       width: 38%;
     }
     &:nth-child(4) {
-			border-right: 0.1em solid $mid;
+			border-right: 0.15em solid scale-color($contrast-alt, $lightness: -35%);
 		}
     &:nth-child(4),
 		&:nth-child(5) {
 			width: 50%; 
-			background-color: $darkest;
+			background-color: scale-color($contrast-alt, $lightness: -65%);
 		}
 	}
 	
@@ -263,8 +263,14 @@
 	}
 	
   
-  .main-nav .parent-item {
-    max-width: 80%;
+  .js .main-nav .parent-item {
+    float: none;
+    padding-top: 0.8em;
+  }
+  
+  .js .main-nav .parent .sectiontoggle {
+	  padding-top: 0.3em;
+	  margin-right: 10%;
   }
   
   .js nav.nav-collapse .sub-menu.open {
@@ -274,7 +280,7 @@
     -webkit-overflow-scrolling: touch; 
     min-width: 33.333%;
     position: absolute;
-    margin-top: 3.5em;
+    margin-top: 0.35em;
     text-align: left;
     li a {
       padding: 0.7em 1.5em 0.7em 1em;
@@ -291,6 +297,18 @@
     float: none;
     height: auto;
     text-align: left;
+    &:nth-child(4) {
+	    background-color: scale-color($mid, $lightness: -35%);
+	    &:hover {
+	      background-color: scale-color($mid, $lightness: -55%);
+	    }
+    }
+    &:nth-child(5) {
+	   	background-color: scale-color($mid, $lightness: -20%);
+		  &:hover {
+		    background-color: scale-color($mid, $lightness: -45%);
+		  }
+    }
   }
   
 } //end min 41em
